[package]
name = "spacer"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Sam Rose <hello@samwho.dev>"]
keywords = ["cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/samwho/spacer"
description = "A CLI utility for adding spacers when command output stops"
include = ["Cargo.toml", "LICENSE", "README.md", "**/*.rs"]

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
terminal_size = "0.2"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
lazy_static = "1.4"
owo-colors = { version = "3", features = ["supports-colors"] }
log = "0.4"
env_logger = "0.10"
human-panic = "1.0"

[dev-dependencies]
test-case = "3"
