[package]
name = "spacer"
version = "0.4.1"
edition = "2024"
license = "MIT"
authors = ["Sam Rose <hello@samwho.dev>"]
keywords = ["cli"]
categories = ["command-line-utilities"]
repository = "https://github.com/samwho/spacer"
description = "A CLI utility for adding spacers when command output stops"
include = ["Cargo.toml", "LICENSE", "README.md", "**/*.rs"]

[badges]
maintenance = { status = "passively-maintained" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
terminal_size = "0.4"
lazy_static = "1.5"
owo-colors = { version = "4", features = ["supports-colors"] }
log = "0.4"
env_logger = "0.11"
human-panic = "2.0"
chrono = "0.4"
chrono-tz = "0.10"

[dev-dependencies]
test-case = "3"
